--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,7 @@
 html{
     background: black;
 }
+
 .webgl
 {
     position: fixed;
@@ -24,10 +25,9 @@ html{
     align-items: center;
     height: 100vh;
     position: relative;
-    font-family: 'Cabin', sans-serif;
+    font-family: 'Rampart One';
     color: #ffeded;
-    text-transform: uppercase;
-    font-size: 7vmin;
+    font-size: 5vmin;
     padding-left: 10%;
     padding-right: 10%;
 }
@@ -35,4 +35,13 @@ html{
 section:nth-child(odd)
 {
     justify-content: flex-end;
+}
+.contact {
+    position: absolute;
+    bottom: 5px;
+    left: 15px;
+    font-family:'Dancing Script';
+}
+a{
+    color: white;
 }
