--- a/src/style.css
+++ b/src/style.css
@@ -18,6 +18,10 @@ html{
     text-align: right;
     width: 50%;
 }
+.right-Text{
+    text-align: right;
+    width: 100%;
+}
 
 .section
 {
@@ -47,6 +51,8 @@ a{
 }
  /*------------------POP UP */
  #modalbox{
+    top: 10px;
+    right: 10px;
     z-index: 1;
     position: fixed;
     width: 80%;
@@ -54,11 +60,10 @@ a{
     height: 80%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: right;
     align-items: center;
     font-size: 18px;
     color: white;
-    /* display: none; */
   }
   .accept-btn{
     font-size: medium;
@@ -68,10 +73,12 @@ a{
     background: rgb(90, 90, 90);
     border-radius: 5px;
     color: white;
+    border: none;
   }
   .img{
     margin-bottom: 15px;
     border-radius: 5px;
+    height: 100px;
   }
   .popuptext{
     text-align: center;
